Resolve issue with PDF viewer being too short

--- a/acj/static/less/pdf.less
+++ b/acj/static/less/pdf.less
@@ -8,7 +8,6 @@
 		height: 100%; 
 		iframe {
 			width: 100%;
-			height: 90%;
 		}
 	}
 }
